--- a/README.Rmd
+++ b/README.Rmd
@@ -13,11 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-# dagger
+# path
 
 <!-- badges: start -->
 
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/dagger)](https://github.com/asshah4/dagger/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/dagger/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/dagger/actions)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/path)](https://github.com/asshah4/path/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/path/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/path/actions)
 
 <!-- badges: end -->
 
@@ -26,13 +26,13 @@ knitr::opts_chunk$set(
 This package has not yet been released on CRAN, but can be downloaded from Github.
 
 ```{r, eval = FALSE}
-remotes::install_github("asshah4/dagger")
+remotes::install_github("asshah4/path")
 ```
 
 
 ## Introduction
 
-The `dagger` package is intended to help build causal models with an underlying focus of **directed acylcic graphs**. However, instead of starting purely from a diagram, this package intends to allow modeling to occur simultaneously, and then leveraging the patterns within the data to help cut away *confounders* and other terms for a more parsimonious causal model. The premise is that there are two components in studying causality:
+The `path` package is intended to help build causal models with an underlying focus of **directed acylcic graphs**. However, instead of starting purely from a diagram, this package intends to allow modeling to occur simultaneously, and then leveraging the patterns within the data to help cut away *confounders* and other terms for a more parsimonious causal model. The premise is that there are two components in studying causality:
 
 1. Causal model diagrams
 1. Hypothesis testing and statistical analysis
@@ -44,7 +44,7 @@ These two components are reflected within the primary functions of the package, 
 The package is simple to use. First, lets load the basic packages. The `mtcars` dataset will serve as the example, and we will use linear regressions as the primary test.
 
 ```{r}
-library(dagger)
+library(path)
 library(parsnip)
 ```
 
