--- a/README.Rmd
+++ b/README.Rmd
@@ -13,11 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-# path
+# murmur
 
 <!-- badges: start -->
 
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/path)](https://github.com/asshah4/path/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/path/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/path/actions)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/murmur)](https://github.com/asshah4/murmur/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/murmur/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/murmur/actions)
 
 <!-- badges: end -->
 
@@ -26,32 +26,32 @@ knitr::opts_chunk$set(
 This package has not yet been released on CRAN, but can be downloaded from Github.
 
 ```{r, eval = FALSE}
-remotes::install_github("asshah4/path")
+remotes::install_github("asshah4/murmur")
 ```
 
 
 ## Introduction
 
-The `path` package is intended to help build causal models with an underlying focus of **directed acylcic graphs**. However, instead of starting purely from a diagram, this package intends to allow modeling to occur simultaneously, and then leveraging the patterns within the data to help cut away *confounders* and other terms for a more parsimonious causal model. The premise is that there are two components in studying causality:
+The `murmur` package is intended to help build causal models with an underlying focus of **directed acyclic graphs**. However, instead of starting purely from a diagram, this package intends to allow modeling to occur simultaneously, and then leveraging the patterns within the data to help cut away *confounders* and other terms for a more parsimonious causal model. The premise is that there are two components in studying causality:
 
 1. Causal model diagrams
 1. Hypothesis testing and statistical analysis
 
-These two components are reflected within the primary functions of the package, and are built to help refine and modulate hypotheses as the study develops. The underlying data structure is the concept of a **map** that has multiple paths describing variable relationships, however they may exist in different **layers** on the map.  
+These two components are reflected within the primary functions of the package, and are built to help refine and modulate hypotheses as the study develops. The underlying data structure is the concept of a **map** that has multiple murmurs describing variable relationships, however they may exist in different **layers** on the map.  
 
 ## Usage
 
 The package is simple to use. First, lets load the basic packages. The `mtcars` dataset will serve as the example, and we will use linear regressions as the primary test.
 
 ```{r}
-library(path)
+library(murmur)
 library(parsnip)
 ```
 
 The basic function of the package is the `study()` argument, which creates a empty data structure object.
 
 ```{r}
-create_study()
+create_map()
 ```
 
 This is accompanied by `hypothesis` objects, which are essentially modified `formula` objects that allow for a better understanding of variable relationships. We create two objects below, which have not yet been analyzed yet.
@@ -78,7 +78,7 @@ These hypotheses can then be *drawn* on to the *study map* as below.
 
 ```{r}
 m1 <-
-	create_study() %>%
+	create_map() %>%
 	add_hypothesis(h1) %>%
 	add_hypothesis(h2) 
 
@@ -86,27 +86,11 @@ m1 <-
 m1
 ```
 
-Subsequently, we can fit the models and add the paths that were required. The **paths** can be utilized to help create the appropriate causal diagrams. The `construct_*()` functions can be used in any order or selectively. 
+Then, for analysis and display of results, the findings can easily be extracted.
 
 ```{r}
 m2 <-
 	m1 %>%
-	construct_map()
-
-# Print analyzed study
-m2
-
-# Plot analyzed study
-library(ggplot2)
-m2 %>%
-	extract_dagitty("h1", tidy = TRUE) %>%
-	ggdag::ggdag()
-```
-
-Then, for analysis and display of results, the findings can easily be extracted.
-
-```{r}
-m2 %>% 
+	construct_models() %>%
 	extract_models(which_ones = "h1", tidy = TRUE)
 ```
-
