--- a/README.Rmd
+++ b/README.Rmd
@@ -32,12 +32,12 @@ remotes::install_github("asshah4/murmur")
 
 ## Introduction
 
-The `murmur` package is intended to help build causal models with an underlying focus of **directed acyclic graphs**. However, instead of starting purely from a diagram, this package intends to allow modeling to occur simultaneously, and then leveraging the patterns within the data to help cut away *confounders* and other terms for a more parsimonious causal model. The premise is that there are two components in studying causality:
+The `murmur` package is intended to help build causal models with an underlying focus on exploration. However, instead of starting purely from a __directed acyclic graph__, this package intends to allow modeling to occur simultaneously, and then leveraging the patterns within the data to help cut away _confounders_ and other terms for a more parsimonious causal model. The premise is that there are two components in studying causality:
 
 1. Causal model diagrams
 1. Hypothesis testing and statistical analysis
 
-These two components are reflected within the primary functions of the package, and are built to help refine and modulate hypotheses as the study develops. The underlying data structure is the concept of a **map** that has multiple murmurs describing variable relationships, however they may exist in different **layers** on the map.  
+These two components are reflected within the primary functions of the package, and are built to help refine and modulate hypotheses as the study develops. The underlying data structure is the concept of a __map__ that has multiple murmurs describing variable relationships, however they may exist in different __layers__ on the map.  
 
 ## Usage
 
@@ -48,10 +48,10 @@ library(murmur)
 library(parsnip)
 ```
 
-The basic function of the package is the `study()` argument, which creates a empty data structure object.
+The basic function of the package serves to help create a `model_map` object.
 
 ```{r}
-create_map()
+create_models()
 ```
 
 This is accompanied by `hypothesis` objects, which are essentially modified `formula` objects that allow for a better understanding of variable relationships. We create two objects below, which have not yet been analyzed yet.
@@ -59,7 +59,8 @@ This is accompanied by `hypothesis` objects, which are essentially modified `for
 ```{r}
 h1 <-
 	hypothesize(
-		mpg ~ X(wt) + hp + disp,
+		mpg ~ wt + hp + disp,
+		exposures = "wt",
 		combination = "sequential",
 		test = linear_reg() %>% set_engine("lm"),
 		data = mtcars,
@@ -78,7 +79,7 @@ These hypotheses can then be *drawn* on to the *study map* as below.
 
 ```{r}
 m1 <-
-	create_map() %>%
+	create_models() %>%
 	add_hypothesis(h1) %>%
 	add_hypothesis(h2) 
 
@@ -91,6 +92,9 @@ Then, for analysis and display of results, the findings can easily be extracted.
 ```{r}
 m2 <-
 	m1 %>%
-	construct_models() %>%
+	construct_tests() %>%
 	extract_models(which_ones = "h1", tidy = TRUE)
+
+# Print findings
+m2
 ```
