--- a/README.Rmd
+++ b/README.Rmd
@@ -13,11 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-# armour
+# volundr
 
 <!-- badges: start -->
 
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/armour)](https://github.com/asshah4/armour/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/armour/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/armour/actions)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/volundr)](https://github.com/asshah4/volundr/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/volundr/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/volundr/actions)
 
 <!-- badges: end -->
 
@@ -26,25 +26,25 @@ knitr::opts_chunk$set(
 This package has not yet been released on CRAN, but can be downloaded from Github.
 
 ```{r, eval = FALSE}
-remotes::install_github("asshah4/armour")
+remotes::install_github("asshah4/volundr")
 ```
 
 
 ## Introduction
 
-The `armour` package is intended to help build causal models with an underlying focus on exploration. However, instead of starting purely from a __directed acyclic graph__, this package intends to allow modeling to occur simultaneously, and then leveraging the patterns within the data to help cut away _confounders_ and other terms for a more parsimonious causal model. The premise is that there are two components in studying causality:
+The `volundr` package is intended to help build causal models with an underlying focus on exploration. However, instead of starting purely from a __directed acyclic graph__, this package intends to allow modeling to occur simultaneously, and then leveraging the patterns within the data to help cut away _confounders_ and other terms for a more parsimonious causal model. The premise is that there are two components in studying causality:
 
 1. Causal model diagrams
 1. Hypothesis testing and statistical analysis
 
-These two components are reflected within the primary functions of the package, and are built to help refine and modulate hypotheses as the study develops. The underlying data structure is the concept of a __map__ that has multiple armours describing variable relationships, however they may exist in different __layers__ on the map.  
+These two components are reflected within the primary functions of the package, and are built to help refine and modulate hypotheses as the study develops. The underlying data structure is the concept of a __map__ that has multiple volundrs describing variable relationships, however they may exist in different __layers__ on the map.  
 
 ## Usage
 
 The package is simple to use. First, lets load the basic packages. The `mtcars` dataset will serve as the example, and we will use linear regressions as the primary test.
 
 ```{r}
-library(armour)
+library(volundr)
 library(parsnip)
 ```
 
