--- a/README.Rmd
+++ b/README.Rmd
@@ -13,11 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-# volundr
+# vlndr
 
 <!-- badges: start -->
 
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/volundr)](https://github.com/asshah4/volundr/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/volundr/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/volundr/actions)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/vlndr)](https://github.com/asshah4/vlndr/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/vlndr/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/vlndr/actions)
 
 <!-- badges: end -->
 
@@ -26,20 +26,25 @@ knitr::opts_chunk$set(
 This package has not yet been released on CRAN, but can be downloaded from Github.
 
 ```{r, eval = FALSE}
-remotes::install_github("asshah4/volundr")
+remotes::install_github("asshah4/vlndr")
 ```
-
 
 ## Introduction
 
-The package `volundr` is intended to help forge together multiple models to better understand complex relationships in the causal space. 
+The package `vlndr` was intended as a way to handle causal- and epidemiology-based modeling by the following principles:
+
+1. Role determination of variables
+2. Generativity in formula creation
+3. Multiple model management
+
+The name is an acronym for "**V**ariables of **L**arge **N**umbers; **D**idn't **R**egress" It also lexically represents the word **völundr**, the Norse name for Wayland the Smith, in the spirit of *forging* together many models. 
 
 ## Usage
 
 The package is simple to use. First, lets load the basic packages. The `mtcars` dataset will serve as the example, and we will use linear regressions as the primary test.
 
 ```{r}
-library(volundr)
+library(vlndr)
 library(parsnip)
 ```
 
