--- a/README.Rmd
+++ b/README.Rmd
@@ -13,43 +13,79 @@ knitr::opts_chunk$set(
 )
 ```
 
-# vlndr
+# rmdl
 
 <!-- badges: start -->
 
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) 
-[![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/vlndr)](https://github.com/asshah4/vlndr/graphs/commit-activity) 
-[![R-CMD-check](https://github.com/asshah4/vlndr/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/asshah4/vlndr/actions/workflows/R-CMD-check.yaml)
+[![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/rmdl)](https://github.com/asshah4/rmdl/graphs/commit-activity) 
+[![R-CMD-check](https://github.com/asshah4/rmdl/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/asshah4/rmdl/actions/workflows/R-CMD-check.yaml)
 
 <!-- badges: end -->
 
 ## Installation
 
-This package can be downloaded from CRAN or from [Github](https://github.com/asshah4/vlndr) as below
+This package can be downloaded from CRAN or from [Github](https://github.com/asshah4/rmdl) as below
 
 ```{r, eval = FALSE}
 # CRAN installation
-install.packages("vlndr")
+install.packages("rmdl")
 # Or remote/developmental version
-remotes::install_github("asshah4/vlndr")
+remotes::install_github("asshah4/rmdl")
 ```
 
 ## Introduction
 
-The package `vlndr` was intended as a way to handle causal- and epidemiology-based modeling by the following principles:
+The package `rmdl` was intended as a way to handle causal- and epidemiology-based modeling by the following principles:
 
 1. Role determination of variables
 2. Generativity in formula creation
 3. Multiple model management
 
-The name is an acronym for "**V**ariables of **L**arge **N**umbers; **D**idn't **R**egress" It also lexically represents the word **völundr**, the Norse name for Wayland the Smith, in the spirit of *forging* together many models. 
-
 ## Usage
 
-The package is simple to use. First, lets load the basic packages. The `mtcars` dataset will serve as the example, and we will use linear regressions as the primary test.
+The package is simple to use. 
+First, lets load the basic packages. 
+The `mtcars` dataset will serve as the example, and we will use linear regressions as the primary test.
 
 ```{r}
-library(vlndr)
-library(parsnip)
+library(rmdl)
 ```
 
+There are several important extended classes that this package introduces, however they are primarily used for internal validation and for shortcuts to allow more effective communication.
+
+- `<fmls>` are a *version* of the base `R` formula object, but contain additional information and have extra features
+- `<tm>` are atomic elements used to describe individual variables, and departs from how terms are generally treated in the `{stats}` package
+- `<mdl>` and `<mdl_tbl>` exist primarily as *tidy* versions of class regression modeling
+
+We will see how they come together below. 
+Next, we will evaluate a toy dataset and evaluate how a `<fmls>` object is generated.
+
+```{r}
+# Look at potential data from the `mtcars` dataset
+head(mtcars)
+
+baseFormula <- mpg ~ wt + hp
+rmdlFormula <- fmls(mpg ~ wt + hp)
+
+# Similar to the base formula
+rmdlFormula
+```
+
+Now we can fit the hypothesis to its data - in this case, a simple linear regression.
+The option to return the model as raw or not is given. 
+If `TRUE`, the default, then the expected result from the modeling fit will be returned.
+For our purposes though, we want to use the custom fit method, which retains more key information.
+
+```{r}
+# Uses a custom fit function 
+rmdlModel <-
+  rmdlFormula |>
+  fit(.fn = lm, data = mtcars, raw = FALSE)
+
+rmdlModel
+```
+
+## Advanced usage
+
+The power of the `{rmdl}` package is partially in its flexibility with formulas. Please see the vignettes for further details on usage.
