--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Quick Start"
+title: "Getting Started"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Quick Start}
